--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
     <title>Simple Chat</title>
 		
     <!-- Bootstrap CSS -->
